# crud-fastapi-postgress-streamlit

./: 404.html  Dockerfile  README.md  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml
backend/: crud.py  database.py  models.py  requirements.txt  router.py  schemas.py
backend/crud/: index.html
backend/database/: index.html
backend/models/: index.html
backend/router/: index.html
backend/schemas/: index.html
docs/: uso.md
docs/backend/: crud.md  database.md  models.md  router.md  schemas.md
docs/frontend/: app.md  produto.md
frontend/: app.py  produto.py  requirements.txt
frontend/app/: index.html
frontend/produto/: index.html
overrides/: extra.css
search/: search_index.json
uso/: index.html
