[tool.poetry]
name = "crud-fastapi-postgress-streamlit"
version = "0.1.0"
description = ""
authors = ["Douglas Saturnino <douglasaturnino@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.31"
pydantic = {extras = ["email"], version = "^2.7.4"}
fastapi = "^0.111.0"
psycopg2-binary = "^2.9.9"
pandas = "^2.2.2"
requests = "^2.32.3"
streamlit = "^1.36.0"


[tool.poetry.group.doc.dependencies]
mkdocs = "^1.6.0"
mkdocstrings = {extras = ["python"], version = "^0.25.0"}
mkdocs-material = "^9.5.30"
pymdown-extensions = "^10.8.1"
mkdocs-autorefs = "^1.0.1"
mkdocs-gen-files = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
